# proj2

./: Astar.h  BFS.cpp  BFS.h  BackTrace.h  BestFS.h  CMakeLists.txt  CacheManager.cpp  CacheManager.h  ClientHandler.h  DFS.cpp  DFS.h  FileCacheManager.cpp  FileCacheManager.h  InputStream.cpp  InputStream.h  MatrixSearchable.cpp  MatrixSearchable.h  MatrixSolver.cpp  MatrixSolver.h  MyClientHandler.cpp  MyClientHandler.h  MyParallerServer.cpp  MyParallerServer.h  MySerialServer.cpp  MySerialServer.h  MyTestClientHandler.cpp  MyTestClientHandler.h  OutputStream.cpp  OutputStream.h  Problem.cpp  Problem.h  Searchable.h  Searcher.h  Server.h  Solution.cpp  Solution.h  Solver.h  StartMain.h  State.cpp  State.h  (+3 more)
